--- a/Assets/Samples/Scripts/Views/FileDialogView.xaml
+++ b/Assets/Samples/Scripts/Views/FileDialogView.xaml
@@ -1,12 +1,14 @@
 ﻿<UserControl
-    x:Class="VacuumBreather.Montreal.MapEditor.Views.FileDialogView"
+    x:Class="Samples.Views.FileDialogView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:io="clr-namespace:System.IO;assembly=mscorlib"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
-    xmlns:vm="clr-namespace:VacuumBreather.Montreal.MapEditor.ViewModels"
+    xmlns:vm="clr-namespace:Samples.ViewModels"
+    Background="#222222"
+    Margin="50"
     d:DataContext="{d:DesignInstance vm:FileDialogViewModel,
                                      IsDesignTimeCreatable=True}"
     d:DesignHeight="450"
@@ -25,14 +27,12 @@
         </Style>
     </UserControl.Resources>
     <Border
-        Margin="50"
-        Background="Wheat"
         BorderBrush="Black"
         BorderThickness="2">
         <DockPanel>
             <Border
                 Padding="5"
-                Background="CornflowerBlue"
+                Background="#2C343A"
                 DockPanel.Dock="Top">
                 <TextBlock
                     HorizontalAlignment="Center"
@@ -43,13 +43,13 @@
                     Text="{Binding DisplayName, Mode=OneTime}" />
             </Border>
             <DockPanel Margin="10" DockPanel.Dock="Bottom">
-                <Button Command="{Binding CloseCommand, Mode=OneTime}" DockPanel.Dock="Right">
+                <Button Command="{Binding CloseDialogCommand, Mode=OneTime}" DockPanel.Dock="Right">
                     <Button.CommandParameter>
                         <system:Boolean>True</system:Boolean>
                     </Button.CommandParameter>
                     Open
                 </Button>
-                <Button Command="{Binding CloseCommand, Mode=OneTime}" DockPanel.Dock="Right">
+                <Button Command="{Binding CloseDialogCommand, Mode=OneTime}" DockPanel.Dock="Right">
                     <Button.CommandParameter>
                         <system:Boolean>False</system:Boolean>
                     </Button.CommandParameter>
