--- a/Assets/Samples/Scripts/Views/FileDialogView.xaml
+++ b/Assets/Samples/Scripts/Views/FileDialogView.xaml
@@ -6,14 +6,17 @@
     xmlns:io="clr-namespace:System.IO;assembly=mscorlib"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
+    xmlns:cal="clr-namespace:Caliburn.Noesis"
     xmlns:vm="clr-namespace:Samples.ViewModels"
     Background="#222222"
     Margin="50"
-    d:DataContext="{d:DesignInstance vm:FileDialogViewModel,
-                                     IsDesignTimeCreatable=True}"
     d:DesignHeight="450"
     d:DesignWidth="800"
+    d:DataContext="{d:DesignInstance vm:FileDialogViewModel, IsDesignTimeCreatable=True}"
     mc:Ignorable="d">
+    <UserControl.Effect>
+        <DropShadowEffect />
+    </UserControl.Effect>
     <UserControl.Resources>
         <HierarchicalDataTemplate DataType="{x:Type vm:FileSystemNode}" ItemsSource="{Binding Children, Mode=OneWay}">
             <TextBlock Text="{Binding Name, Mode=OneWay}" />
@@ -43,18 +46,8 @@
                     Text="{Binding DisplayName, Mode=OneTime}" />
             </Border>
             <DockPanel Margin="10" DockPanel.Dock="Bottom">
-                <Button Command="{Binding CloseDialogCommand, Mode=OneTime}" DockPanel.Dock="Right">
-                    <Button.CommandParameter>
-                        <system:Boolean>True</system:Boolean>
-                    </Button.CommandParameter>
-                    Open
-                </Button>
-                <Button Command="{Binding CloseDialogCommand, Mode=OneTime}" DockPanel.Dock="Right">
-                    <Button.CommandParameter>
-                        <system:Boolean>False</system:Boolean>
-                    </Button.CommandParameter>
-                    Cancel
-                </Button>
+                <Button DockPanel.Dock="Right" Content="Cancel" cal:CloseDialog.Result="{x:Static cal:DialogResult.Cancel}" />
+                <Button DockPanel.Dock="Right" Content="Select File" cal:CloseDialog.Result="{x:Static cal:DialogResult.Ok}" />
                 <TextBox
                     Margin="5"
                     Padding="5"
