--- a/Assets/Caliburn.Noesis/Platform/ShellView.xaml
+++ b/Assets/Caliburn.Noesis/Platform/ShellView.xaml
@@ -2,7 +2,11 @@
     x:Class="Caliburn.Noesis.ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cal="clr-namespace:Caliburn.Noesis">
+    xmlns:cal="clr-namespace:Caliburn.Noesis"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DataContext="{d:DesignInstance cal:ShellViewModel}"
+    mc:Ignorable="d">
     <Grid>
         <Grid.Resources>
             <cal:NullCheckToVisibilityConverter x:Key="NullToHidden" />
