--- a/Assets/Samples/Scripts/Views/FileDialogView.xaml
+++ b/Assets/Samples/Scripts/Views/FileDialogView.xaml
@@ -1,18 +1,18 @@
 ﻿<UserControl
-    x:Class="Samples.Views.FileDialogView"
+    x:Class="Caliburn.Noesis.Samples.Views.FileDialogView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:cal="clr-namespace:Caliburn.Noesis"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:io="clr-namespace:System.IO;assembly=mscorlib"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:system="clr-namespace:System;assembly=mscorlib"
-    xmlns:cal="clr-namespace:Caliburn.Noesis"
-    xmlns:vm="clr-namespace:Samples.ViewModels"
-    Background="#222222"
+    xmlns:vm="clr-namespace:Caliburn.Noesis.Samples.ViewModels"
     Margin="50"
+    d:DataContext="{d:DesignInstance vm:FileDialogViewModel,
+                                     IsDesignTimeCreatable=True}"
     d:DesignHeight="450"
     d:DesignWidth="800"
-    d:DataContext="{d:DesignInstance vm:FileDialogViewModel, IsDesignTimeCreatable=True}"
+    Background="#222222"
     mc:Ignorable="d">
     <UserControl.Effect>
         <DropShadowEffect />
@@ -29,9 +29,7 @@
             <Setter Property="Padding" Value="5" />
         </Style>
     </UserControl.Resources>
-    <Border
-        BorderBrush="Black"
-        BorderThickness="2">
+    <Border BorderBrush="Black" BorderThickness="2">
         <DockPanel>
             <Border
                 Padding="5"
@@ -46,8 +44,14 @@
                     Text="{Binding DisplayName, Mode=OneTime}" />
             </Border>
             <DockPanel Margin="10" DockPanel.Dock="Bottom">
-                <Button DockPanel.Dock="Right" Content="Cancel" cal:CloseDialog.Result="{x:Static cal:DialogResult.Cancel}" />
-                <Button DockPanel.Dock="Right" Content="Select File" cal:CloseDialog.Result="{x:Static cal:DialogResult.Ok}" />
+                <Button
+                    cal:CloseDialog.Result="{x:Static cal:DialogResult.Cancel}"
+                    Content="Cancel"
+                    DockPanel.Dock="Right" />
+                <Button
+                    cal:CloseDialog.Result="{x:Static cal:DialogResult.Ok}"
+                    Content="Select File"
+                    DockPanel.Dock="Right" />
                 <TextBox
                     Margin="5"
                     Padding="5"
@@ -65,7 +69,6 @@
                 <TreeView
                     x:Name="TreeView"
                     Grid.Column="0"
-                    Background="Transparent"
                     ItemsSource="{Binding Root, Mode=OneWay}">
                     <TreeView.ItemContainerStyle>
                         <Style
