--- a/Assets/Samples/Scripts/Views/FileDialogView.xaml
+++ b/Assets/Samples/Scripts/Views/FileDialogView.xaml
@@ -1,64 +1,62 @@
-﻿<UserControl
-    x:Class="Caliburn.Noesis.Samples.Views.FileDialogView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cal="clr-namespace:Caliburn.Noesis"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:io="clr-namespace:System.IO;assembly=mscorlib"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:vm="clr-namespace:Caliburn.Noesis.Samples.ViewModels"
-    Margin="50"
-    d:DataContext="{d:DesignInstance vm:FileDialogViewModel,
-                                     IsDesignTimeCreatable=True}"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    Background="#222222"
-    mc:Ignorable="d">
+﻿<UserControl x:Class="Caliburn.Noesis.Samples.Views.FileDialogView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:cal="clr-namespace:Caliburn.Noesis"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:io="clr-namespace:System.IO;assembly=mscorlib"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:Caliburn.Noesis.Samples.ViewModels"
+             Margin="50"
+             d:DataContext="{d:DesignInstance vm:FileDialogViewModel,
+                                              IsDesignTimeCreatable=True}"
+             d:DesignHeight="450"
+             d:DesignWidth="800"
+             Background="#222222"
+             mc:Ignorable="d">
     <UserControl.Effect>
         <DropShadowEffect />
     </UserControl.Effect>
     <UserControl.Resources>
-        <HierarchicalDataTemplate DataType="{x:Type vm:FileSystemNode}" ItemsSource="{Binding Children, Mode=OneWay}">
+        <HierarchicalDataTemplate DataType="{x:Type vm:FileSystemNode}"
+                                  ItemsSource="{Binding Children, Mode=OneWay}">
             <TextBlock Text="{Binding Name, Mode=OneWay}" />
         </HierarchicalDataTemplate>
 
-        <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}">
+        <Style BasedOn="{StaticResource {x:Type Button}}"
+               TargetType="{x:Type Button}">
             <Setter Property="Width" Value="100" />
             <Setter Property="Height" Value="30" />
             <Setter Property="Margin" Value="5" />
             <Setter Property="Padding" Value="5" />
         </Style>
     </UserControl.Resources>
-    <Border BorderBrush="Black" BorderThickness="2">
+    <Border BorderBrush="Black"
+            BorderThickness="2">
         <DockPanel>
-            <Border
-                Padding="5"
-                Background="#2C343A"
-                DockPanel.Dock="Top">
-                <TextBlock
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    FontSize="20"
-                    FontWeight="Bold"
-                    Foreground="White"
-                    Text="{Binding DisplayName, Mode=OneTime}" />
+            <Border Padding="5"
+                    Background="#2C343A"
+                    DockPanel.Dock="Top">
+                <TextBlock HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           FontSize="20"
+                           FontWeight="Bold"
+                           Foreground="White"
+                           Text="{Binding DisplayName, Mode=OneTime}" />
             </Border>
-            <DockPanel Margin="10" DockPanel.Dock="Bottom">
-                <Button
-                    cal:CloseDialog.Result="{x:Static cal:DialogResult.Cancel}"
-                    Content="Cancel"
-                    DockPanel.Dock="Right" />
-                <Button
-                    cal:CloseDialog.Result="{x:Static cal:DialogResult.Ok}"
-                    Content="Select File"
-                    DockPanel.Dock="Right" />
-                <TextBox
-                    Margin="5"
-                    Padding="5"
-                    VerticalAlignment="Center"
-                    DataContext="{Binding SelectedFile, Mode=OneWay}"
-                    IsReadOnly="True"
-                    Text="{Binding Path=Name, Mode=OneWay}" />
+            <DockPanel Margin="10"
+                       DockPanel.Dock="Bottom">
+                <Button cal:CloseDialog.Result="{x:Static cal:DialogResult.Cancel}"
+                        Content="Cancel"
+                        DockPanel.Dock="Right" />
+                <Button cal:CloseDialog.Result="{x:Static cal:DialogResult.Ok}"
+                        Content="Select File"
+                        DockPanel.Dock="Right" />
+                <TextBox Margin="5"
+                         Padding="5"
+                         VerticalAlignment="Center"
+                         DataContext="{Binding SelectedFile, Mode=OneWay}"
+                         IsReadOnly="True"
+                         Text="{Binding Path=Name, Mode=OneWay}" />
             </DockPanel>
             <Grid Margin="10">
                 <Grid.ColumnDefinitions>
@@ -66,25 +64,22 @@
                     <ColumnDefinition Width="5" />
                     <ColumnDefinition Width="66*" />
                 </Grid.ColumnDefinitions>
-                <TreeView
-                    x:Name="TreeView"
-                    Grid.Column="0"
-                    ItemsSource="{Binding Root, Mode=OneWay}">
+                <TreeView x:Name="TreeView"
+                          Grid.Column="0"
+                          ItemsSource="{Binding Root, Mode=OneWay}">
                     <TreeView.ItemContainerStyle>
-                        <Style
-                            d:DataContext="{d:DesignInstance vm:FileSystemNode}"
-                            BasedOn="{StaticResource {x:Type TreeViewItem}}"
-                            TargetType="TreeViewItem">
+                        <Style d:DataContext="{d:DesignInstance vm:FileSystemNode}"
+                               BasedOn="{StaticResource {x:Type TreeViewItem}}"
+                               TargetType="TreeViewItem">
                             <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}" />
                             <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
                         </Style>
                     </TreeView.ItemContainerStyle>
                 </TreeView>
                 <!--<GridSplitter Grid.Column="1" Width="5" />-->
-                <ListBox
-                    Grid.Column="2"
-                    ItemsSource="{Binding SelectedItem.Files, ElementName=TreeView, Mode=OneWay}"
-                    SelectedItem="{Binding SelectedFile, Mode=TwoWay}">
+                <ListBox Grid.Column="2"
+                         ItemsSource="{Binding SelectedItem.Files, ElementName=TreeView, Mode=OneWay}"
+                         SelectedItem="{Binding SelectedFile, Mode=TwoWay}">
                     <ListBox.ItemTemplate>
                         <DataTemplate DataType="{x:Type io:FileInfo}">
                             <TextBlock Text="{Binding Name, Mode=OneTime}" />
