--- a/Assets/Samples/Scripts/Views/MainView.xaml
+++ b/Assets/Samples/Scripts/Views/MainView.xaml
@@ -1,39 +1,40 @@
-﻿<UserControl
-    x:Class="Caliburn.Noesis.Samples.Views.MainView"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
-    mc:Ignorable="d">
+﻿<UserControl x:Class="Caliburn.Noesis.Samples.Views.MainView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             d:DesignHeight="450"
+             d:DesignWidth="800"
+             mc:Ignorable="d">
 
     <DockPanel>
-        <ToolBar VerticalAlignment="Top" DockPanel.Dock="Top">
-            <Button
-                Content="Open File"
-                Width="150"
-                Height="50"
-                Margin="5"
-                VerticalAlignment="Center"
-                Command="{Binding OpenDialogCommand, Mode=OneTime}">
-            </Button>
-            <Button
-                Content="Cancel"
-                Width="150"
-                Height="50"
-                Margin="5"
-                VerticalAlignment="Center"
-                Command="{Binding CancelCommand, Mode=OneTime}">
-            </Button>
+        <ToolBar VerticalAlignment="Top"
+                 DockPanel.Dock="Top">
+            <Button Width="150"
+                    Height="50"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Command="{Binding OpenDialogCommand, Mode=OneTime}"
+                    Content="Open File" />
+            <Button Width="150"
+                    Height="50"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Command="{Binding CancelCommand, Mode=OneTime}"
+                    Content="Cancel" />
+            <Button Width="150"
+                    Height="50"
+                    Margin="5"
+                    VerticalAlignment="Center"
+                    Command="{Binding AddWindowCommand, Mode=OneTime}"
+                    Content="Add Window" />
         </ToolBar>
-        <TextBox
-            x:Name="TextContent"
-            Text="{Binding FileContent, Mode=OneWay}"
-            Focusable="False"
-            IsReadOnly="True"
-            HorizontalScrollBarVisibility="Auto"
-            VerticalScrollBarVisibility="Auto" />
+        <TextBox x:Name="TextContent"
+                 Focusable="False"
+                 HorizontalScrollBarVisibility="Auto"
+                 IsReadOnly="True"
+                 Text="{Binding FileContent, Mode=OneWay}"
+                 VerticalScrollBarVisibility="Auto" />
     </DockPanel>
 </UserControl>
