Add z-index control for the windows and fix a WPF problem

--- a/Assets/Caliburn.Noesis/Platform/ShellView.xaml
+++ b/Assets/Caliburn.Noesis/Platform/ShellView.xaml
@@ -6,6 +6,43 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       d:DataContext="{d:DesignInstance cal:ShellViewModel}"
       mc:Ignorable="d">
+    <Page.Resources>
+        <DataTemplate x:Key="WindowHost">
+            <Border cal:Draggable.BringToFrontOnClick="True"
+                    d:DataContext="{d:DesignInstance cal:WindowScreen,
+                                                     IsDesignTimeCreatable=False}"
+                    BorderBrush="Black"
+                    BorderThickness="2">
+                <DockPanel>
+                    <Border Height="25"
+                            cal:Draggable.IsDragHandle="True"
+                            Background="DarkSlateGray"
+                            DockPanel.Dock="Top">
+                        <Grid>
+                            <TextBlock HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"
+                                       FontSize="14"
+                                       FontWeight="Bold"
+                                       Foreground="White"
+                                       Text="{Binding DisplayName, Mode=OneWay}" />
+                            <Button Width="25"
+                                    HorizontalAlignment="Right"
+                                    Background="DarkRed"
+                                    Command="{Binding CloseWindowCommand, Mode=OneWay}"
+                                    Content="X"
+                                    FontSize="10"
+                                    FontWeight="Bold"
+                                    Foreground="FloralWhite" />
+                        </Grid>
+                    </Border>
+                    <Rectangle Height="2"
+                               DockPanel.Dock="Top"
+                               Fill="Black" />
+                    <ContentControl Content="{Binding Mode=OneWay}" />
+                </DockPanel>
+            </Border>
+        </DataTemplate>
+    </Page.Resources>
     <Grid>
         <Grid.Resources>
             <cal:NullCheckToVisibilityConverter x:Key="NullToHidden" />
@@ -20,7 +57,8 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type cal:WindowScreen}">
-                    <Border BorderBrush="Black"
+                    <Border cal:Draggable.BringToFrontOnClick="True"
+                            BorderBrush="Black"
                             BorderThickness="2">
                         <DockPanel>
                             <Border Height="25"
