--- a/Assets/Samples/FileExplorer/Scripts/Views/MainView.xaml
+++ b/Assets/Samples/FileExplorer/Scripts/Views/MainView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Caliburn.Noesis.Samples.Views.MainView"
+﻿<UserControl x:Class="Caliburn.Noesis.Samples.FileExplorer.Views.MainView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
