--- a/Blend/FileExplorer/App.xaml
+++ b/Blend/FileExplorer/App.xaml
@@ -1,14 +1,14 @@
-﻿<Application x:Class="Caliburn.Noesis.HelloWorld.App"
+﻿<Application x:Class="Caliburn.Noesis.FileExplorer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:helloWorld="clr-namespace:Caliburn.Noesis.Samples.HelloWorld">
+             xmlns:fileExplorer="clr-namespace:Caliburn.Noesis.Samples.FileExplorer">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Noesis.GUI.Extensions;component/Theme/NoesisTheme.DarkBlue.xaml" />
                 <ResourceDictionary Source="/Noesis.GUI.Extensions;component/Theme/NoesisTheme.Fonts.xaml" />
                 <ResourceDictionary>
-                    <helloWorld:HelloWorldBootstrapper x:Key="Bootstrapper" />
+                    <fileExplorer:FileExplorerBootstrapper x:Key="Bootstrapper" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
