--- a/Blend/FileExplorer/App.xaml
+++ b/Blend/FileExplorer/App.xaml
@@ -1,14 +1,12 @@
 ﻿<Application x:Class="Caliburn.Noesis.FileExplorer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:fileExplorer="clr-namespace:Caliburn.Noesis.Samples.FileExplorer">
+             xmlns:sample="clr-namespace:Caliburn.Noesis.Samples.FileExplorer">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Noesis.GUI.Extensions;component/Theme/NoesisTheme.DarkBlue.xaml" />
-                <ResourceDictionary Source="/Noesis.GUI.Extensions;component/Theme/NoesisTheme.Fonts.xaml" />
                 <ResourceDictionary>
-                    <fileExplorer:FileExplorerBootstrapper x:Key="Bootstrapper" />
+                    <sample:FileExplorerBootstrapper x:Key="Bootstrapper" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
