--- a/Blend/HelloWorld/App.xaml
+++ b/Blend/HelloWorld/App.xaml
@@ -1,14 +1,12 @@
 ﻿<Application x:Class="Caliburn.Noesis.HelloWorld.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:helloWorld="clr-namespace:Caliburn.Noesis.Samples.HelloWorld">
+             xmlns:sample="clr-namespace:Caliburn.Noesis.Samples.HelloWorld">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Noesis.GUI.Extensions;component/Theme/NoesisTheme.DarkBlue.xaml" />
-                <ResourceDictionary Source="/Noesis.GUI.Extensions;component/Theme/NoesisTheme.Fonts.xaml" />
                 <ResourceDictionary>
-                    <helloWorld:HelloWorldBootstrapper x:Key="Bootstrapper" />
+                    <sample:HelloWorldBootstrapper x:Key="Bootstrapper" />
                 </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
