--- a/Assets/Samples/FlipView/Scripts/Views/MainView.xaml
+++ b/Assets/Samples/FlipView/Scripts/Views/MainView.xaml
@@ -1,10 +1,14 @@
 <UserControl x:Class="Caliburn.Noesis.Samples.FlipView.Views.MainView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:Caliburn.Noesis.Controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Caliburn.Noesis.Samples.FlipView.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:MainViewModel, IsDesignTimeCreatable=True}"
+             d:DataContext="{d:DesignInstance viewModels:MainViewModel,
+                                              IsDesignTimeCreatable=True}"
              mc:Ignorable="d">
-    <FlipView></FlipView>
+    <controls:FlipView IsCycling="True"
+                       ItemsSource="{Binding Items, Mode=OneWay}"
+                       SelectedItem="{Binding ActiveItem, Mode=TwoWay}" />
 </UserControl>
