--- a/Assets/Caliburn.Noesis/Controls/FlipViewResources.xaml
+++ b/Assets/Caliburn.Noesis/Controls/FlipViewResources.xaml
@@ -14,6 +14,7 @@
     </Style>
 
     <Style TargetType="controls:FlipView">
+        <Setter Property="Background" Value="Transparent" />
         <Setter Property="ButtonStyle" Value="{StaticResource Style.Button.FlipView}" />
         <Setter Property="Focusable" Value="False" />
         <Setter Property="IsTabStop" Value="False" />
