--- a/Assets/Samples/Conductors/Resources/FlipViewResources.xaml
+++ b/Assets/Samples/Conductors/Resources/FlipViewResources.xaml
@@ -1,68 +1,88 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:Caliburn.Noesis.Samples.Conductors.Controls"
-                    xmlns:ex="clr-namespace:Caliburn.Noesis.Samples.Conductors.MarkupExtensions"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:viewModels="clr-namespace:Caliburn.Noesis.Samples.Conductors.ViewModels">
+                    xmlns:cal="clr-namespace:Caliburn.Noesis"
+                    xmlns:controls="clr-namespace:Caliburn.Noesis.Controls">
+
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="TextBlockResources.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Thickness x:Key="Thickness.Button.FlipView.BorderThickness">1.0</Thickness>
-
-    <Color x:Key="Color.Button.FlipView.Foreground">Black</Color>
-    <Color x:Key="Color.Button.FlipView.Background">#444444</Color>
-    <Color x:Key="Color.Button.FlipView.Background.MouseOver">#666666</Color>
-    <Color x:Key="Color.Button.FlipView.Background.Pressed">#888888</Color>
-    <Color x:Key="Color.Button.FlipView.Border">#FFFFFF</Color>
+    <Color x:Key="Color.ItemsListItem.Default">#222322</Color>
+    <Color x:Key="Color.ItemsListItem.Selected">#A5803D</Color>
+    <Color x:Key="Color.Button.FlipView.Stroke">#463D2E</Color>
+    <Color x:Key="Color.Button.FlipView.Stroke.MouseOver">#50402D</Color>
+    <Color x:Key="Color.Button.FlipView.Fill">#685942</Color>
+    <Color x:Key="Color.Button.FlipView.Fill.MouseOver">#9A7F58</Color>
 
     <Style x:Key="Style.Button.FlipView"
            TargetType="Button">
-        <Setter Property="Width" Value="50" />
-        <Setter Property="Height" Value="50" />
-        <Setter Property="Margin" Value="10,5" />
-        <Setter Property="Content" Value="&lt;" />
-        <Setter Property="HorizontalContentAlignment" Value="Center" />
-        <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Foreground" Value="{ex:SolidBrush {StaticResource Color.Button.FlipView.Foreground}}" />
-        <Setter Property="Background" Value="{ex:SolidBrush {StaticResource Color.Button.FlipView.Background}}" />
-        <Setter Property="BorderThickness" Value="{StaticResource Thickness.Button.FlipView.BorderThickness}" />
-        <Setter Property="BorderBrush" Value="{ex:SolidBrush {StaticResource Color.Button.FlipView.Border}}" />
-        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="Foreground" Value="{cal:SolidBrush {StaticResource Color.Button.FlipView.Fill}}" />
+        <Setter Property="BorderBrush" Value="{cal:SolidBrush {StaticResource Color.Button.FlipView.Stroke}}" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Height" Value="24" />
+        <Setter Property="Width" Value="24" />
         <Setter Property="ContentTemplate">
             <Setter.Value>
                 <DataTemplate>
-                    <TextBlock Foreground="{TemplateBinding TextBlock.Foreground}"
-                               Text="{Binding Mode=OneWay}"
-                               TextAlignment="Center" />
+                    <Viewbox>
+                        <Grid Background="Transparent">
+                            <Path HorizontalAlignment="Center"
+                                  VerticalAlignment="Center"
+                                  Data="M 26 2 L 2 11.5 L 26 22 Z"
+                                  Stroke="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=Button}}"
+                                  StrokeThickness="2" />
+                            <Path HorizontalAlignment="Center"
+                                  VerticalAlignment="Center"
+                                  Data="M 20 0 L 4 6.5 L 20 13 Z"
+                                  Fill="{Binding Foreground, RelativeSource={RelativeSource AncestorType=Button}}" />
+                        </Grid>
+                    </Viewbox>
                 </DataTemplate>
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Name="Border"
-                            Width="{TemplateBinding Width}"
-                            Height="{TemplateBinding Height}"
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                        <ContentPresenter Margin="{TemplateBinding Padding}"
-                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                          ContentTemplate="{TemplateBinding ContentTemplate}"
-                                          ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
-                                          TextBlock.Foreground="{TemplateBinding Foreground}" />
-                    </Border>
+                    <ContentPresenter Name="ContentPresenter"
+                                      Margin="{TemplateBinding Padding}"
+                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                      ContentTemplate="{TemplateBinding ContentTemplate}"
+                                      ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}" />
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="{ex:SolidBrush {StaticResource Color.Button.FlipView.Background.MouseOver}}" />
-                        </Trigger>
-                        <Trigger Property="IsPressed" Value="True">
-                            <Setter TargetName="Border" Property="Background" Value="{ex:SolidBrush {StaticResource Color.Button.FlipView.Background.Pressed}}" />
+                            <Setter Property="BorderBrush" Value="{cal:SolidBrush {StaticResource Color.Button.FlipView.Stroke.MouseOver}}" />
+                            <Setter Property="Foreground" Value="{cal:SolidBrush {StaticResource Color.Button.FlipView.Fill.MouseOver}}" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" Value="0.5" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="Style.ListViewItem.FlipView"
+           TargetType="ListViewItem">
+        <Setter Property="Margin" Value="2" />
+        <Setter Property="Focusable" Value="False" />
+        <Setter Property="IsTabStop" Value="False" />
+        <Setter Property="IsHitTestVisible" Value="False" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListViewItem">
+                    <Rectangle Name="Rectangle"
+                               Width="5"
+                               Height="5"
+                               Fill="{cal:SolidBrush {StaticResource Color.ItemsListItem.Default}}">
+                        <Rectangle.LayoutTransform>
+                            <RotateTransform Angle="45" />
+                        </Rectangle.LayoutTransform>
+                    </Rectangle>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter TargetName="Rectangle" Property="Fill" Value="{cal:SolidBrush {StaticResource Color.ItemsListItem.Selected}}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -109,14 +129,15 @@
                                         <ColumnDefinition Width="Auto" />
                                         <ColumnDefinition Width="*" />
                                     </Grid.ColumnDefinitions>
-                                    <ContentPresenter x:Name="ContentPresenter"
+                                    <ContentPresenter x:Name="PreviousItemPresenter"
                                                       Grid.Column="0"
                                                       Margin="20,0"
                                                       HorizontalAlignment="Right"
                                                       VerticalAlignment="Center"
                                                       Content="{TemplateBinding PreviousItem}"
                                                       ContentTemplate="{TemplateBinding PreviewItemTemplate}" />
-                                    <ListView Grid.Column="1"
+                                    <ListView x:Name="ItemsList"
+                                              Grid.Column="1"
                                               Margin="5"
                                               HorizontalAlignment="Center"
                                               VerticalAlignment="Center"
@@ -126,8 +147,8 @@
                                               Focusable="False"
                                               IsHitTestVisible="False"
                                               IsTabStop="False"
-                                              ItemContainerStyle="{TemplateBinding ContextItemContainerStyle}"
-                                              ItemTemplate="{TemplateBinding ContextItemTemplate}"
+                                              ItemContainerStyle="{TemplateBinding ItemsListItemContainerStyle}"
+                                              ItemTemplate="{TemplateBinding ItemsListItemTemplate}"
                                               ItemsSource="{TemplateBinding ItemsSource}"
                                               SelectedItem="{TemplateBinding SelectedItem}"
                                               SelectionMode="Single"
@@ -138,7 +159,8 @@
                                             </ItemsPanelTemplate>
                                         </ItemsControl.ItemsPanel>
                                     </ListView>
-                                    <ContentPresenter Grid.Column="2"
+                                    <ContentPresenter x:Name="NextItemPresenter"
+                                                      Grid.Column="2"
                                                       Margin="20,0"
                                                       HorizontalAlignment="Left"
                                                       VerticalAlignment="Center"
@@ -146,7 +168,8 @@
                                                       ContentTemplate="{TemplateBinding PreviewItemTemplate}" />
                                 </Grid>
                             </StackPanel>
-                            <ContentPresenter Content="{TemplateBinding SelectedItem}" />
+                            <ContentPresenter x:Name="ContentPresenter"
+                                              Content="{TemplateBinding SelectedItem}" />
                         </DockPanel>
                     </Grid>
                 </ControlTemplate>
