--- a/Assets/Samples/Conductors/Resources/TextBlockResources.xaml
+++ b/Assets/Samples/Conductors/Resources/TextBlockResources.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ex="clr-namespace:Caliburn.Noesis.Samples.Conductors.MarkupExtensions">
+                    xmlns:cal="clr-namespace:Caliburn.Noesis">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ImageResources.xaml" />
     </ResourceDictionary.MergedDictionaries>
@@ -9,7 +9,7 @@
            TargetType="TextBlock">
         <Setter Property="FontFamily" Value="{StaticResource FontFamily.Default}" />
         <Setter Property="FontSize" Value="{StaticResource FontSize.Normal}" />
-        <Setter Property="Foreground" Value="{ex:SolidBrush {StaticResource Color.Foreground.Default}}" />
+        <Setter Property="Foreground" Value="{cal:SolidBrush {StaticResource Color.Foreground.Default}}" />
     </Style>
 
     <Style x:Key="Style.TextBlock.Header"
@@ -17,14 +17,14 @@
            TargetType="TextBlock">
         <Setter Property="TextAlignment" Value="Center" />
         <Setter Property="FontSize" Value="{StaticResource FontSize.Large}" />
-        <Setter Property="Foreground" Value="{ex:SolidBrush {StaticResource Color.Foreground.Header}}" />
+        <Setter Property="Foreground" Value="{cal:SolidBrush {StaticResource Color.Foreground.Header}}" />
     </Style>
 
     <Style x:Key="Style.TextBlock.HeaderSmall"
            BasedOn="{StaticResource Style.TextBlock.Header}"
            TargetType="TextBlock">
         <Setter Property="FontSize" Value="{StaticResource FontSize.Normal}" />
-        <Setter Property="Foreground" Value="{ex:SolidBrush {StaticResource Color.Foreground.HeaderSmall}}" />
+        <Setter Property="Foreground" Value="{cal:SolidBrush {StaticResource Color.Foreground.HeaderSmall}}" />
     </Style>
 
     <Style x:Key="Style.TextBlock.HeaderLarge"
