--- a/Assets/Samples/Conductors/Scripts/Views/CharactersView.xaml
+++ b/Assets/Samples/Conductors/Scripts/Views/CharactersView.xaml
@@ -1,20 +1,84 @@
 ﻿<UserControl x:Class="Caliburn.Noesis.Samples.Conductors.Views.CharactersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:characters="clr-namespace:Caliburn.Noesis.Samples.Conductors.Model.Characters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:noesis="clr-namespace:Caliburn.Noesis"
              xmlns:viewModels="clr-namespace:Caliburn.Noesis.Samples.Conductors.ViewModels"
-             d:DataContext="{d:DesignInstance viewModels:BestiaryViewModel,
-                                              IsDesignTimeCreatable=False}"
+             xmlns:views="clr-namespace:Caliburn.Noesis.Samples.Conductors.Views"
+             d:DataContext="{d:DesignInstance viewModels:CharactersViewModel,
+                                              IsDesignTimeCreatable=True}"
              d:DesignHeight="450"
              d:DesignWidth="800"
              mc:Ignorable="d">
-    <Grid>
-        <TextBlock HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Text="{Binding DisplayName, Mode=OneWay}" />
+    <UserControl.Resources>
+        <views:CharacterImageDictionary x:Key="CharacterImageDictionary">
+            <ImageBrush x:Key="Eskel"
+                        ImageSource="{StaticResource CharacterEskel}"
+                        Stretch="Uniform" />
+            <ImageBrush x:Key="Lambert"
+                        ImageSource="{StaticResource CharacterLambert}"
+                        Stretch="Uniform" />
+            <ImageBrush x:Key="Vesemir"
+                        ImageSource="{StaticResource CharacterVesemir}"
+                        Stretch="Uniform" />
+        </views:CharacterImageDictionary>
 
+        <views:DictionaryLookupConverter x:Key="DictionaryLookupConverter" />
 
-    </Grid>
+        <DataTemplate DataType="{x:Type characters:Character}">
+            <TextBlock Style="{StaticResource Style.TextBlock.Large}"
+                       Text="{Binding DisplayName, Mode=OneWay}" />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type characters:DescriptionParagraph}">
+            <TextBlock Name="TextBlock"
+                       Text="{Binding Text, Mode=OneWay}"
+                       TextWrapping="Wrap" />
+            <DataTemplate.Triggers>
+                <DataTrigger Value="False"
+                             Binding="{Binding HasBeenRead, Mode=OneWay}">
+                    <Setter TargetName="TextBlock" Property="Foreground" Value="{noesis:SolidBrush {StaticResource Color.Foreground.Highlight.Darker}}" />
+                </DataTrigger>
+            </DataTemplate.Triggers>
+        </DataTemplate>
+
+        <Style x:Key="DescriptionContainerStyle"
+               TargetType="ListBoxItem">
+            <Setter Property="Focusable" Value="False" />
+            <Setter Property="Margin" Value="20,20,20,20" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ListBoxItem">
+                        <ContentPresenter />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+
+    <UniformGrid Margin="0,20"
+                 Columns="3">
+        <ListBox Background="Transparent"
+                 BorderThickness="0"
+                 ItemsSource="{Binding Characters, Mode=OneWay}"
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                 ScrollViewer.VerticalScrollBarVisibility="Visible"
+                 SelectedItem="{Binding SelectedCharacter, Mode=TwoWay}" />
+
+        <Border Margin="10,0"
+                Background="{Binding SelectedCharacter.DisplayName, Mode=OneWay, Converter={StaticResource DictionaryLookupConverter}, ConverterParameter={StaticResource CharacterImageDictionary}}" />
+
+        <ListBox views:ScrollToTopBehavior.ScrollToTop="True"
+                 Background="Transparent"
+                 Focusable="False"
+                 ItemContainerStyle="{StaticResource DescriptionContainerStyle}"
+                 ItemsSource="{Binding SelectedCharacter.DescriptionParagraphs}"
+                 ScrollViewer.CanContentScroll="False"
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                 ScrollViewer.VerticalScrollBarVisibility="Visible"
+                 SelectionMode="Single" />
+    </UniformGrid>
 
 </UserControl>
